fixed alignment.

--- a/source/faa-et-praj-site/styles/faa_et_praj.css
+++ b/source/faa-et-praj-site/styles/faa_et_praj.css
@@ -20,7 +20,7 @@ body {
 }
 
 #featureTableContainer {
-    padding-bottom: 200px !important;
+    padding-bottom: 91px !important;
     margin: 0;
     height: 443px;
     width: 250px;
